--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             </a>
             <nav class="gl-nav">
                 <ul>
-                    <li><a href="index.html">home</a></li>
                     <li><a href="#no1">Japan</a></li>
                     <li><a href="#no2">world</a></li>
                     <li><a href="#no3">language</a></li>
@@ -39,6 +38,7 @@
             their behalf.</p>
     </header>
     <!-- 以下メイン -->
+    <div class="wrapper">
     <main>
         <section id="no1">
             <div class="no1-flex">
@@ -93,19 +93,23 @@
         </section>
         <div class="pagetop">Top</div>
     </main>
+    </div><!--.wrapper-->
     <!-- 以下footer -->
     <footer>
-        <a href="index.html">
-            <h2>flower&nbsp;language</h2>
-        </a>
-        <div class="ft-nav">
-            <p><a href="#no1">about</a></p>
-            <p><a href="#no2">work</a></p>
-            <p><a href="#no3">contact</a></p>
-        </div>
+        <div class="ft">
+            <a href="index.html">
+                <h2>flower&nbsp;language</h2>
+            </a>
+            <nav class="ft-nav">
+                <ul>
+                    <li><a href="#no1">Japan</a></li>
+                    <li><a href="#no2">world</a></li>
+                    <li><a href="#no3">language</a></li>
+                </ul>
+            </nav><!--.gl-nav-->
+        </div><!--.taitle-nav-->
         <small>&copy;yamamori2025</small>
     </footer>
-    
     <script src="script.js"></script>
 </body>
 
